# char

./: .plan  Cargo.toml  pnpm-lock.yaml
apps/cli/: Cargo.toml
apps/cli/src/: main.rs
apps/cli/src/commands/: mod.rs
apps/cli/src/commands/batch/: mod.rs
apps/desktop/: package.json
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs
apps/desktop/src/services/enhancer/: index.ts
apps/desktop/src/session/components/note-input/: header.tsx
apps/desktop/src/session/components/note-input/transcript/: index.tsx
apps/desktop/src/session/components/note-input/transcript/shared/: hooks.ts  render-transcript.tsx  segment-renderer.tsx  use-word-correction.ts  word-span.tsx
apps/desktop/src/session/components/outer-header/: index.tsx  screen-capture.tsx
apps/desktop/src/store/zustand/listener/: utils.test.ts  utils.ts
apps/desktop/src/stt/: useRunBatch.ts  useStartListening.ts
apps/web/content/articles/: what-makes-reliable-ai-note-taker.mdx
crates/audio/: Cargo.toml
crates/audio/src/: async_ring.rs  lib.rs  mic.rs  norm.rs  rt_ring.rs
crates/audio/src/speaker/: macos.rs  mod.rs
crates/local-stt-core/: Cargo.toml
crates/local-stt-core/src/: lib.rs
crates/local-stt-server/: Cargo.toml
crates/local-stt-server/src/: axum_server.rs  events.rs  lib.rs  runtime.rs
crates/outlook-calendar/: Cargo.toml
crates/outlook-calendar/src/: types.rs
crates/resampler/: Cargo.toml
crates/resampler/benches/: polynomial_degree.rs
crates/resampler/src/async_source/: dynamic_new.rs  static_new.rs
crates/tcc/src/: lib.rs
crates/tcc/swift-lib/src/: lib.swift
crates/transcribe-proxy/src/relay/: mod.rs
crates/transcribe-proxy/src/relay/channel_split/: coordinator.rs  io.rs  mod.rs  payload.rs
crates/transcribe-proxy/src/routes/streaming/: hyprnote.rs  mod.rs  passthrough.rs  session.rs
crates/transcribe-proxy/tests/: hyprnote_contract_e2e.rs  replay.rs
crates/transcribe-proxy/tests/common/: hyprnote.rs  mock_upstream.rs  mod.rs  proxy.rs  ws.rs
crates/ws-utils/src/: lib.rs
plugins/outlook-calendar/: Cargo.toml  build.rs  package.json
plugins/outlook-calendar/js/: bindings.gen.ts
plugins/outlook-calendar/permissions/: default.toml
plugins/outlook-calendar/permissions/autogenerated/: reference.md
plugins/outlook-calendar/permissions/schemas/: schema.json
plugins/outlook-calendar/src/: commands.rs  convert.rs  error.rs  ext.rs  fetch.rs  lib.rs  types.rs
plugins/permissions/src/: ext.rs
plugins/screen/: Cargo.toml  build.rs
plugins/screen/permissions/: default.toml
plugins/screen/src/: commands.rs  error.rs  ext.rs  lib.rs
