[package]
name = "desktop"
version = "0.0.0"
authors = ["you"]
edition = "2024"
description = "Char Desktop App"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "hyprnote_desktop_lib"
# Note: cdylib removed because V8 (used by deno_core) has TLS relocations incompatible
# with shared libraries on Linux. Mobile support is not needed (macOS/Linux/Windows only).
crate-type = ["staticlib", "rlib"]

[build-dependencies]
tauri-build = { workspace = true, features = [] }

[dependencies]
tauri = { workspace = true, features = ["specta", "macos-private-api", "protocol-asset"] }

tauri-plugin-analytics = { workspace = true }
tauri-plugin-apple-calendar = { workspace = true }
tauri-plugin-apple-contact = { workspace = true }
tauri-plugin-audio-priority = { workspace = true }
tauri-plugin-auth = { workspace = true }
tauri-plugin-autostart = { workspace = true }
tauri-plugin-bedrock = { workspace = true }
tauri-plugin-clipboard-manager = { workspace = true }
tauri-plugin-db2 = { workspace = true }
tauri-plugin-deep-link = { workspace = true }
tauri-plugin-deeplink2 = { workspace = true }
tauri-plugin-detect = { workspace = true }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-dock = { workspace = true }
tauri-plugin-flag = { workspace = true }
tauri-plugin-fs-db = { workspace = true }
tauri-plugin-fs-sync = { workspace = true }
tauri-plugin-fs2 = { workspace = true }
tauri-plugin-git = { workspace = true }
tauri-plugin-google-calendar = { workspace = true }
tauri-plugin-hooks = { workspace = true }
tauri-plugin-http = { workspace = true }
tauri-plugin-icon = { workspace = true }
tauri-plugin-importer = { workspace = true }
tauri-plugin-js = { workspace = true }
tauri-plugin-listener = { workspace = true }
tauri-plugin-listener2 = { workspace = true }
tauri-plugin-local-stt = { workspace = true }
tauri-plugin-mcp = { workspace = true }
tauri-plugin-misc = { workspace = true }
tauri-plugin-network = { workspace = true }
tauri-plugin-notification = { workspace = true }
tauri-plugin-notify = { workspace = true }
tauri-plugin-opener = { workspace = true }
tauri-plugin-opener2 = { workspace = true }
tauri-plugin-os = { workspace = true }
tauri-plugin-outlook-calendar = { workspace = true }
tauri-plugin-overlay = { workspace = true }
tauri-plugin-path2 = { workspace = true }
tauri-plugin-pdf = { workspace = true }
tauri-plugin-permissions = { workspace = true }
tauri-plugin-prevent-default = { workspace = true }
tauri-plugin-process = { workspace = true }
tauri-plugin-relay = { workspace = true }
tauri-plugin-screen = { workspace = true }
tauri-plugin-sentry = { workspace = true }
tauri-plugin-settings = { workspace = true }
tauri-plugin-sfx = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-sidecar2 = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
tauri-plugin-store = { workspace = true }
tauri-plugin-store2 = { workspace = true }
tauri-plugin-tantivy = { workspace = true }
tauri-plugin-template = { workspace = true }
tauri-plugin-tracing = { workspace = true }
tauri-plugin-tray = { workspace = true }
tauri-plugin-updater = { workspace = true }
tauri-plugin-updater2 = { workspace = true }
tauri-plugin-window-state = { workspace = true }
tauri-plugin-windows = { workspace = true }

specta = { workspace = true }
specta-typescript = { workspace = true }
tauri-specta = { workspace = true, features = ["derive", "typescript"] }

sentry = { workspace = true, features = ["tracing"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
strum = { workspace = true, features = ["derive"] }
tracing = { workspace = true }

hypr-host = { workspace = true }
hypr-supervisor = { workspace = true }

pico-args = { workspace = true }
ractor = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }

[features]
devtools = ["tauri/devtools"]
automation = ["tauri-plugin-automation"]
apple-calendar-fixture = ["tauri-plugin-apple-calendar/fixture"]

[target.'cfg(target_os = "macos")'.dependencies]
tauri-plugin-automation = { version = "0.1", optional = true }
hypr-intercept = { workspace = true }
